fix scrollbars in storybook docs

--- a/easy-ui-react/src/styles/_scrollbars.scss
+++ b/easy-ui-react/src/styles/_scrollbars.scss
@@ -12,7 +12,7 @@
   --os-handle-border-radius: 999px;
 }
 
-.ezui-os-theme-overlay {
+.os-scrollbar.ezui-os-theme-overlay {
   @include default-os-style;
   --ezui-scrollbar-width: 2px;
   --os-size: calc(
@@ -22,7 +22,7 @@
   --os-padding-axis: #{token-helpers.design-token("space.1")};
 }
 
-.ezui-os-theme-code-block {
+.os-scrollbar.ezui-os-theme-code-block {
   @include default-os-style;
   --os-size: 4px;
   --os-padding-perpendicular: 0;
